@@ -1,4 +1,5 @@
 version 1.4.2
+- Use exact value for DECIMAL parameters and not float estimates [05-03-07]
 - Use IIapi_abort() to close connections at the request end [grantc 28-02-07]
 - Reduced memory usage when putting Long objects into the database [grantc 08-02-07]
 - Initialize Ingres OpenAPI once during module startup [grantc 08-02-07]
